--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea/
+config.yaml
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -129,3 +130,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Ignore dynaconf secret files
+.secrets.*
